samples/_failures_safe/1761600855_6953ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22852def.c: In function ‘main’:
./samples/SAFE/__tmp_22852def.c:154:19: error: expected ‘)’ at end of input
  154 |         if (strcmp
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_22852def.c:154:9: error: expected declaration or statement at end of input
  154 |         if (strcmp
      |         ^~
./samples/SAFE/__tmp_22852def.c:154:9: error: expected declaration or statement at end of input
